ARROW-8977: [R] Table$create with schema crashes with some dictionary index types

Closes #7614 from nealrichardson/dict-type-bug

Authored-by: Neal Richardson <neal.p.richardson@gmail.com>
Signed-off-by: François Saint-Jacques <fsaintjacques@gmail.com>